--- a/Makefile.macos
+++ b/Makefile.macos
@@ -1,4 +1,4 @@
-CFLAGS  = -fno-exceptions -fno-rtti -I. -Ilua-5.1.5 -Isqlite3 -O2
+CFLAGS  = -fno-exceptions -fno-rtti -I. -Isqlite3 -O2
 LIBS    =
 
 include build/rules.mk
