absolute media path fix, remove http_live_port option, what is this??? :)

--- a/xupnpd.cfg
+++ b/xupnpd.cfg
@@ -4,6 +4,9 @@
 # http://xupnpd.org
 #
 
+# delay before start
+sleep=0
+
 # log level: 0 - silent, 1 - errors, 2 - info, 3 - HTTP, 4 - HTTP with headers, 5 - SOAP, 6 - SSDP, 7 - internal, 8 - debug
 log_level=3
 
@@ -33,7 +36,6 @@ ssdp_ttl=1
 # HTTP settings
 #http_proxy=user:pass@192.168.6.5:8080
 http_port=4044
-http_live_port=40000
 http_backlog=5
 http_rcv_timeout=20
 http_snd_timeout=0
